--- a/index.html
+++ b/index.html
@@ -5,43 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="div-todasimagens">
+        <span>
+        </span>
     <div class="div-imagem">
         <img class="imagem" src="pelé.jpeg" alt="">
-        <h1 class="titulo">imagem 1</h1>
+        <h1 class="titulo">Pelé</h1>
     </div>    
     <div class="div-imagem">
         <img class="imagem" src="romario e bebeto.jpeg" alt="">
-        <h1 class="titulo">imagem 2</h1>
+        <h1 class="titulo">Romário e Bebeto</h1>
     </div>    
     <div class="div-imagem">
         <img class="imagem" src="cafu.jpeg" alt="">
-        <h1 class="titulo">imagem 3</h1>
+        <h1 class="titulo">Cafú</h1>
     </div>    
+    <span>
+    </span> 
+    <span>
+    </span> 
     <div class="div-imagem">
         <img class="imagem" src="fenomeno.jpeg" alt="">
-        <h1 class="titulo">imagem 4</h1>
-    </div>    
+        <h1 class="titulo">Ronaldo Fenômeno</h1>
+    </div>  
     <div class="div-imagem">
         <img class="imagem" src="ronaldinho.jpeg" alt="">
-        <h1 class="titulo">imagem 5</h1>
+        <h1 class="titulo">Ronaldinho Gaúcho</h1>
     </div>    
     <div class="div-imagem">
         <img class="imagem" src="adriano imperador.jpeg" alt="">
-        <h1 class="titulo">imagem 6</h1>
-    </div>    
+        <h1 class="titulo">Adriano imperador</h1>
+    </div> 
+    <span>
+    </span>  
+    <span>
+    </span> 
     <div class="div-imagem">
         <img class="imagem" src="kaká.jpeg" alt="">
-        <h1 class="titulo">imagem 7</h1>
+        <h1 class="titulo">Kaká</h1>
     </div>    
     <div class="div-imagem">
         <img class="imagem" src="zico.jpg" alt="">
-        <h1 class="titulo">imagem 8</h1>
+        <h1 class="titulo">Zico</h1>
     </div>    
     <div class="div-imagem">
         <img class="imagem" src="gabigol.jpeg" alt="">
-        <h1 class="titulo">imagem 9</h1>
+        <h1 class="titulo">Gabigol</h1>
     </div>    
 </body>
 </html>
